# ocr-gemma3

./: Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
app/: main.py
